--- a/templates/base.html
+++ b/templates/base.html
@@ -14,11 +14,11 @@
 <!--- navbar -->
 <nav class="nav-extended cyan accent-3">
     <div class="nav-wrapper">
-      <a href="{{ url_for('get_events') }}" class="brand-logo" id="sby-kita">Surabaya Kita</a>
+      <a href="{{ url_for('home') }}" class="brand-logo" id="sby-kita">Surabaya Kita</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Home</a></li>
-        <li><a class="active" href="#">Events</a></li>
+        <li><a href="{{ url_for('home') }}">Home</a></li>
+        <li><a class="active" href="{{ url_for('get_events') }}">Events</a></li>
         {% if session.user %}   
         <li class="tab"><a href="#">My Profile</a></li>
         <li class="tab"><a href="#">Create Event</a></li>
@@ -36,8 +36,8 @@
 <!--- mobile navbar -->
   <ul class="sidenav" id="mobile-demo">
   <h4 class="h4 center-align cyan-text text-accent-3">Surabaya Kita</h4>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Events</a></li>
+        <li><a href="{{ url_for('home') }}">Home</a></li>
+        <li><a href="{{ url_for('get_events') }}">Events</a></li>
         {% if session.user %}
         <li><a href="#">My Profile</a></li>
         <li><a href="#">Create Event</a></li>
@@ -51,11 +51,11 @@
         {% endif %}
   </ul> 
 
+    {% block content %}
+
+
 <!-- info about site -->
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-    {% block content %}
-    {% endblock %}
 
 <!-- search bar -->
 <div id="search-bar" class="row center-align text-shadow cyan accent-3">
@@ -110,6 +110,8 @@
   <h3 class="deep-orange-text text-lighten-2 center-align">Nothing Found</h3>
 {% endif %}     
 </header>
+
+    {% endblock %}
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
