--- a/templates/my_profile.html
+++ b/templates/my_profile.html
@@ -5,9 +5,10 @@
 <div class="row">
 	<div class="col s12 m8 offset-m2">
 		<div class="card-panel">
-        <h3 class="center-align cyan-text lighten-2-text">
+        <h3 class="center-align cyan-text text-accent-3">
         {{ username }}'s Profile</h3>
-        <p>{{ users.username }}</p>
+        {{ username }}<br>
+        {{ my_name }}<br>
 		</div>
 	</div>
 </div>
