--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -25,7 +25,7 @@
 					<label for="password" class="cyan-text text-accent-3">  password</label>
 				</div>
 			</div>
-            <!-- register -->
+            <!-- sign up new user -->
             <div class="row">
             <button type="submit" class="col s12 btn-large cyan accent-3">
             Sign Up <i class="fas fa-sign-in-alt"></i></button>
