--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
         <li><a href="{{ url_for('sign_up') }}">Sign Up</a></li>
         {% endif %}
   </ul> 
-
+</header>
 <section>
 <!-- for flash message -->
 {% with messages = get_flashed_messages() %}
@@ -69,61 +69,14 @@
 
 <!-- info about site -->
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+ 
 
-<!-- search bar -->
-<div id="search-bar" class="row center-align text-shadow cyan accent-3">
-<form action="#" method="post" class="col s12">
-<div class="row valign-wrapper center-align">
-<div class="input-field col s12 m8">
-<i class="fas fa-search prefix white-text"></i>
-<input type="text" id="query" name="query" minlength="3" class="validate" required>
-<label for="query" class="white-text">Search Events</label>
+<div class="row all-events-button">
+        <div class="col s12 center-align">
+          <a href="{{ url_for('get_events') }}" class="btn-large light-green accent-2 all-events-button">
+        Click here to see all events<i class="fas fa-calendar-alt right"></i></a>
+        </div>
 </div>
-<div class="col s12 m4">
-          <button class="btn light-green accent-2 text-shadow" type="submit">
-          Search
-<i class="fas fa-search left"></i></button>
-        <a href="{{ url_for('get_events') }}" class="btn white text-shadow cyan-text text-accent-3">
-        Clear</a>
-
-</div>
-</div>
-</form>
-</div>
-{% if tasks|length > 0 %}
-
-<ul class="collapsible">
-{% for task in tasks %}
-    <li>
-      <div class="collapsible-header white-text cyan lighten-2 text-shadow">
-      <div class="col s3">
-      <i class="fas fa-caret-down"></i>
-      {% if session.user|lower == task.created_by|lower %}
-      <a href="#" class="btn-small deep-orange accent-3">Done</a>
-            <a href="#" class="btn-small deep-orange accent-2">Edit</a>
-      {% endif %}
-      </div>
-      <div class="col s9">
-      <strong>{{ task.task_name }}</strong> : {{ task.due_date}}
-      {% if task.is_urgent == "on" %}
-          <i class="fas fa-exclamation-circle white-text tooltipped"
-          data-position="right" data-tooltip="Urgent!"></i>
-{% endif %}
-    </div>
-      </div>
-      <div class="collapsible-body">
-      <strong>{{ task.category_name }}</strong>
-      <p>{{ task.task_description }}</p>
-      <p><em>{{ task.created_by }}</em></p>
-      </div>
-    </li>
-  {% endfor %}
-  </ul>
-  {% else %}
-  <h3 class="deep-orange-text text-lighten-2 center-align">Nothing Found</h3>
-{% endif %}     
-</header>
-
     {% endblock %}
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
