--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
             {% if session.user |lower == "admin"|lower %}
         <li class="tab"><a href="{{ url_for('get_categories') }}">Manage Categories</a></li>
             {% endif %}        
-        <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+        <li><a href="{{ url_for('logout') }}" class="waves-effect waves-light text-shadow light-green accent-2 btn">Log Out</a></li>
             {% else %}
         <li><a href="{{ url_for('login') }}" class="waves-effect waves-light text-shadow light-green accent-2 btn">Log In</a></li>
         <li><a href="{{ url_for('sign_up') }}">Sign Up</a></li>
