--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-
-<h3 class="center-align cyan-text text-accent-3 text-shadow">Login</h3>
-
-<div class="row">
+<div class="row flashes">
+<h4 class="cyan accent-3 center-align white-text header-shadow">Login</h4> 
+</div><div class="row">
 	<form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
 		<div class="card-panel">
         <!-- username -->
@@ -12,7 +11,7 @@
 					<i class="fas fa-user-cog prefix cyan-text text-accent-3"></i>
 					<input id="username" name="username" type="text" class="validate"
                     minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" required>
-					<label for="username" class="cyan-text text-accent-3">  username</label>
+					<label for="username" class="cyan-text text-accent-3">  Username</label>
 				</div>
 			</div>
             <!-- password -->
@@ -21,7 +20,7 @@
                 <i class="fas fa-user-lock prefix cyan-text text-accent-3"></i>
 					<input id="password" name="password" type="password" class="validate"
                     minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" required>
-					<label for="password" class="cyan-text text-accent-3">  password</label>
+					<label for="password" class="cyan-text text-accent-3">  Password</label>
 				</div>
 			</div>
             <!-- register -->
