--- a/templates/base.html
+++ b/templates/base.html
@@ -78,7 +78,57 @@
         </div>
 </div>
     {% endblock %}
-
+<!-- footer -->
+      <footer class="page-footer">
+        <div class="row ">
+          <div class="col s12 m4 center-align footer">
+            <div class="fixed">
+              <h4>Surabaya Kita Cafe</h4>
+              <i class="fa fa-coffee"></i>
+            </div>
+          </div>
+          <div class="col s12 m4 center-align footer">
+            <div class="fixed">
+              <h4 class="white-text">Contact Us</h4>
+              <p class="white-text"><i class="fa fa-phone"></i> 085 777 7777</p>
+              <p class="white-text">
+                <i class="fa fa-envelope"></i> info@surabayakita.com
+              </p>
+            </div>
+          </div>
+          <div class="col s12 m4 center-align">
+            <div class="fixed">
+              <h4 class="white-text">Social Media</h4>
+              <ul class="white-text social list-inline">
+                <li class="">
+                  <a href="images/coming-soon.jpg" target="_blank">
+                    <i class="fab fa-facebook-square" aria-hidden="true"></i>
+                    <span class="sr-only">Facebook </span>
+                  </a>
+                </li>
+                <li class="#">
+                  <a href="images/coming-soon.jpg" target="_blank">
+                    <i class="fab fa-instagram" aria-hidden="true"></i>
+                    <span class="sr-only">Instagram</span>
+                  </a>
+                </li>
+                <li class="#">
+                  <a href="images/coming-soon.jpg" target="_blank">
+                    <i class="fab fa-linkedin" aria-hidden="true"></i>
+                    <span class="sr-only">Linked In</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div class="short-divider"></div>
+          </div>
+        </div>
+        <div class="footer-copyright center-align cyan-aacent-3">
+            <div class="container">
+            © 2020 Travels with Reggie
+            </div>
+          </div>
+      </footer>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="{{ url_for('static', filename='js/script.js') }}"></script>
