--- a/templates/events.html
+++ b/templates/events.html
@@ -16,7 +16,25 @@
         {% else %} {% if event.category_name == "Coffee" %}
         <img src="{{ url_for('static', filename='images/coffee.jpg') }}" />
         <div class="event-category">Coffee</div>
+        {% else %} {% if event.category_name == "Walk" %}
+        <img src="{{ url_for('static', filename='images/walk.jpg') }}" />
+        <div class="event-category">Walk</div>
+        {% else %} {% if event.category_name == "Market" %}
+        <img src="{{ url_for('static', filename='images/market.jpg') }}" />
+        <div class="event-category">Market</div>
+        {% else %} {% if event.category_name == "Social" %}
+        <img src="{{ url_for('static', filename='images/social.jpg') }}" />
+        <div class="event-category">Social</div>
+        {% else %} {% if event.category_name == "Workshop" %}
+        <img src="{{ url_for('static', filename='images/workshop.jpg') }}" />
+        <div class="event-category">Workshop</div>
+        {% else %} {% if event.category_name == "Book Club" %}
+        <img src="{{ url_for('static', filename='images/bookclub.jpg') }}" />
+        <div class="event-category">Bookclub</div>
+        {% endif %}
+        {% endif %}
         {% endif %} {% endif %}
+        {% endif %} {% endif %}{% endif %}
       </div>
       <div class="card-content">
         <p class="event-description">{{ event.event_description }}</p>
@@ -37,11 +55,45 @@
         <!-- {% endif %}<br>
 {{ event.created_by }}<br> -->
       </div>
-      <div class="card-link-div center-align">
-        <a class="card-link" href="{{ url_for('single_event', event_id=event._id) }}">{{ event.event_name }}
-        <i class="fas fa-plus prefix white-text tooltipped" id="event-deets"
-                data-position="right" data-tooltip="Get Details"></i></a>
-      </div>
+      <div class="card-content card-link-div center-align">
+      <span class="card-title activator">{{ event.event_name }}
+      <i class="fas fa-plus prefix white-text tooltipped" id="event-deets"
+                data-position="right" data-tooltip="Get Details"></i></span>
+    </div>
+      <div class="card-reveal">
+      <span class="card-title card-link-div center-align">{{ event.event_name }}
+      <i class="fas fa-times prefix white-text tooltipped right" id="event-deets-close"
+                data-position="right" data-tooltip="Close Details"></i></span>
+<p><i class="fas fa-list-ul prefix cyan-text text-accent-3 tooltipped sgl-event"
+                data-position="right" data-tooltip="Event Category"></i>
+                {{ event.category_name }}<br>
+                <i class="fas fa-edit prefix cyan-text text-accent-3 tooltipped sgl-event"
+                data-position="right" data-tooltip="Event Description"></i>
+                {{ event.event_description }}<br>
+                <i class="fas fa-map prefix cyan-text text-accent-3 tooltipped sgl-event"
+                data-position="right" data-tooltip="Event Location"></i>
+                {{ event.location }}<br>
+                <i class="fas fa-map-marker-alt prefix cyan-text text-accent-3 tooltipped sgl-event"
+                data-position="right" data-tooltip="Meet Point"></i>
+                {{ event.meet_point }}<br>
+                <i class="fas fa-calendar-alt prefix cyan-text text-accent-3 tooltipped sgl-event"
+                data-position="right" data-tooltip="Date of Event"></i>
+                {{ event.event_date }}<br>
+                <i class="fas fa-clock prefix cyan-text text-accent-3 tooltipped sgl-event"
+                data-position="right" data-tooltip="Time of Event"></i>
+                {{ event.event_time }}<br>
+                    {% if event.paid_event == "off" %}
+                    <i class="fas fa-comment-dollar cyan-text text-accent-3 tooltipped sgl-event"
+                     data-position="right" data-tooltip="Free!"></i>
+                    Free event!<br>
+                    {% else %}
+                    <i class="fas fa-comment-dollar cyan-text text-accent-3 tooltipped sgl-event"
+                     data-position="right" data-tooltip="Not Free"></i> 
+                    There is a charge for this event - see description<br>
+                    {% endif %}
+                <i class="fas fa-user prefix cyan-text text-accent-3 tooltipped sgl-event"
+                data-position="right" data-tooltip="Created by user"></i>
+                {{ event.created_by }}<br></p>    </div>
     </div>
   </div>
   {% endfor %}
